@@ -1,3 +1,8 @@
+2009-03-08  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* Makefile.am (man_MANS): Don't install man pages.
+	(pkginclude): Don't install header files.
+
 2009-02-11  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Makefile.am: Changed librudeconfig.la to a noinst target.
